grammar.js
    program: $ => seq(
      optional($.edition_pragma),
      repeat($.import_stmt),
      repeat($._declaration),
    ),

    // Edition pragma — opts a module into a dated language edition (Rust-style
    // editions, SPEC §17). Must be the first line of the file. Names are dates,
    // e.g. `@edition "2026.6"`. Read by the checker (lower/infer/eval), which gate
    // edition-specific semantics; absent → the project's pinned default edition.
    _declaration: $ => choice(
      $.type_def,
      $.store_def,
      $.machine_def,
      $.saga_def,
      $.stream_def,
      $.module_def,
      $.function_def,
      $.function_sig,
      $.binding,
      $.decorator_def,
      $.kernel_block,
    ),

    // First-class saga: a top-level persistent FSM with compensation.
    //   saga Checkout(cart: Cart): Result Receipt Error
    //     over CheckoutState        -- optional explicit backing store
    //     :reserve
    //       ...
    // Called like a function `Checkout(cart)` to run to completion, or spawned
    // as a live instance with `go Checkout(cart)` (yields a saga handle).
    stream_def: $ => seq(
      'stream',
      $.upper_id,
      ':',
      $._type,
      $._newline,
    ),

    // ----------
    // Types
    // ----------

    _type: $ => choice(
      $.simple_type,
      $.type_var,
      $.lifetime_var,
      $.lifetime_of_type,
      $.unit_type,
      $.parameterized_type,
      $.record_type,
      $.tuple_type,
      $.tainted_type,
      $.effect_type,
      $.async_type,
      $.array_type,
      $.result_type,
      $.pointer_type,
      $.atomic_type,
    ),

    simple_type: $ => $.upper_id,

    unit_type: $ => prec(1, '()'),

    parameterized_type: $ => prec(1, seq(
      $.upper_id,
      '(',
      commaSep1($.type_or_expr),
      ')',
    )),

    type_or_expr: $ => choice(
      $._type,
      $._expr,
    ),

    tuple_type: $ => seq(
      '(',
      commaSep1($._type),
      ')',
    ),

    effect_type: $ => seq(
      'Effect',
      '[',
      commaSep1($.lower_id),
      ']',
      $._type,
    ),

    result_type: $ => seq(
      'Result',
      choice(
        // `Result(ok, err)` paren form — `token.immediate('(')` (no space) keeps it
        // distinct from juxtaposition `Result ok err`. Without this, `Result(A, B)`
        // parsed as `Result` applied to the tuple `(A, B)` and then hungrily ate the
        // following expression as the error type (turning a def into a signature).
        seq(token.immediate('('), $._type, ',', $._type, ')'),
        seq($._type, $._type),
      ),
    ),

    module_def: $ => seq(
      'module',
      $.lower_id,
      $._newline,
      $._indent,
      optional($.capabilities_decl),
      repeat($._declaration),
      $._dedent,
    ),

    capabilities_decl: $ => seq(
      'capabilities',
      ':',
      '[',
      commaSep1($.lower_id),
      ']',
      $._newline,
    ),

    // ----------
    // Function definitions
    // ----------

    function_sig: $ => seq(
      'def',
      $.lower_id,
      '(',
      commaSep($._type),
      ')',
      ':',
      $._type,
      $._newline,
    ),

    function_def: $ => choice(
      // block form
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        $._newline,
        $._indent,
        repeat1($._statement),
        $._dedent,
      ),
      // single-line form: def foo(x: Number): Number -> x + 1
      seq(
        'def',
        $.lower_id,
        optional($.param_list),
        ':',
        $._type,
        '->',
        $._expr,
        $._newline,
      ),
    ),

    // where clause as first line(s) of body
    where_stmt: $ => seq(
      'where',
      commaSep1(choice(
        seq($.lower_id, ':', $.upper_id),
        seq('(', $.lifetime_constraint, ')'),
      )),
      $._newline,
    ),

    // params: typed, untyped, pattern (:atom), type-pattern (Rect), wildcard (_),
    // literal (0, true) for clause-head dispatch on a constant value
    param: $ => choice(
      seq($.lower_id, ':', $._type, '=', $._expr),   // n: Number = 0
      seq($.lower_id, '=', $._expr),                 // n = 0  (type inferred)
      seq($.lower_id, ':', $._type),
      $.lower_id,
      $.atom_lit,
      $.upper_id,
      $.wildcard,
      $.number,
      $.bool,
    ),

    // Function-signature parameter list. A bare `*` separator marks every
    // parameter after it keyword-only: def render(node, *, theme=Dark).
    param_list: $ => seq(
      '(',
      commaSep(choice($.param, $.kw_separator)),
      ')',
    ),

    _statement: $ => choice(
      $.binding,
      $.block_binding,
      $.index_assign,
      $.deref_assign,
      $.destructure,
      $.on_handler,
      $.pipe_block,
      $.try_block,
      $.retry_block,
      $.loop_expr,
      $.await_stmt,
      $.machine_expr,
      $.saga_expr,
      $.where_stmt,
      seq($._expr, $._newline),
      // Block expressions end with _dedent (no trailing _newline):
      $.if_expr,
      $.if_pattern_expr,
      $.match_expr,
      $.responsive_expr,
      $.transaction_expr,
      $.comptime_block,
      $.unsafe_block,
      $.pipe_match_stmt,
      $.pipe_lambda_stmt,
      $.element,
      $._newline,
    ),

    // Saga-specific statement set — superset of _statement.
    // Saga-only rules are ONLY valid here, keeping _indent from being
    // valid after expressions in regular function bodies.
    // saga_branch (| pattern -> ...) is valid directly here — go_stmt+
    // followed by saga_branch+ at the same level forms a parallel join.
    binding: $ => seq(
      optional(choice('const', 'let', seq('let', 'mut'), 'mut')),
      $.lower_id,
      optional(seq(':', $._type)),
      '=',
      $._expr,
      $._newline,
    ),

    _expr: $ => choice(
      $.literal,
      $.identifier_expr,
      $.unary_expr,
      $.binary_expr,
      $.pipe_expr,
      $.ternary_expr,
      $.if_then_expr,
      $.field_access,
      $.optional_chain,
      $.array_index,
      $.deref_expr,
      $.addr_of_expr,
      $.propagate_expr,
      $.range_expr,
      $.if_pattern_expr,
      $.type_test,
      $.record_literal,
      $.record_spread,
      $.brace_block,
      $.list_literal,
      $.for_expr,
      $.match_expr,
      $.responsive_expr,
      $.if_expr,
      $.call,
      $.lambda,
      $.send_expr,
      $.ask_expr,
      $.transaction_expr,
      $.js_block,
      $.unsafe_block,
      $.comptime_block,
      $.lazy_expr,
      $.go_expr,
      $.resume_expr,
      $.drop_expr,
      $.break_expr,
      $.continue_expr,
      $.grouped,
      $.tuple_literal,
      $.await_expr,
    ),

    identifier_expr: $ => choice(
      $.lower_id,
      $.upper_id,
    ),

    binary_expr: $ => choice(
      prec.left('power',
        seq($._expr, '^', $._expr)),
      prec.left('multiplicative',
        seq($._expr, choice('*', '/', '%'), $._expr)),
      prec.left('additive',
        seq($._expr, choice('+', '-', '++'), $._expr)),
      prec.left('bitwise_shift',
        seq($._expr, choice('<<', '>>'), $._expr)),
      prec.left('bitwise',
        seq($._expr, choice('&', '|', 'xor'), $._expr)),
      prec.left('comparative',
        seq($._expr, choice('==', '!=', '<', '>', '<=', '>='), $._expr)),
      prec.left('logical',
        seq($._expr, choice('&&', '||'), $._expr)),
    ),

    range_expr: $ => prec.left('range', seq(
      $._expr,
      choice('..', '..='),
      $.atom,
    )),

    // for (x = 1..10, y = %items, x > y) -> (x * y)
    for_expr: $ => prec.right('lambda', seq(
      'for',
      '(',
      $.for_generator,
      repeat(seq(',', $.for_clause)),
      ')',
      '->',
      $._expr,
    )),

    // A comprehension generator. The 2026.6 form is `x in iter` (matching the UI
    // keyed-list `for r in rows`). The legacy `x = source` form — with its optional,
    // semantically-inert `%` sigil — stays in the superset grammar but is deprecated
    // (lowerer warns in 2026.1, errors in 2026.6).
    for_generator: $ => choice(
      seq($.lower_id, 'in', $._expr),
      seq($.lower_id, '=', $.for_source),
    ),

    // Legacy generator source. The `%` "iterate" sigil was always a no-op (the
    // lowerer drops it); removed in 2026.6 along with the `=` form.
    for_source: $ => choice(
      seq('%', $._expr),
      $._expr,
    ),

    for_clause: $ => choice(
      $.for_generator,
      $._expr,
    ),

    // if fetchUser = Ok x — pattern match in condition
    // `prec.right` resolves the same dangling-else as `if_expr` (else binds inner).
    if_pattern_expr: $ => prec.right(seq(
      'if',
      $._expr,
      '=',
      $.simple_pattern,
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
      optional(seq(
        'else',
        $._newline,
        $._indent,
        repeat1($._statement),
        $._dedent,
      )),
    )),

    field_access: $ => prec.left('postfix', seq(
      $._expr,
      '.',
      $.member_name,
    )),

    propagate_expr: $ => prec.left('postfix', choice(
      seq($._expr, token.immediate('?')),
      seq($._expr, '?:', $._expr),
    )),

    record_literal: $ => choice(
      seq('#{', commaSep1($.record_field), '}'),
      seq('{',  commaSep1($.record_field), '}'),
    ),

    record_field: $ => seq(
      $.lower_id,
      ':',
      $._expr,
    ),

    list_literal: $ => seq(
      '[',
      commaSep($._expr),
      ']',
    ),

    grouped: $ => seq(
      '(',
      $._expr,
      ')',
    ),

    // Tuple literal: (a, b) or (a, b, c) — at least two elements
    // prec(1) over grouped so GLR prefers tuple when comma follows
    tuple_literal: $ => prec(1, seq(
      '(',
      $._expr,
      ',',
      commaSep1($._expr),
      optional(','),
      ')',
    )),

    go_expr: $ => prec('unary', seq('go', $._expr)),

    // resume a crashed saga from its durable journal: `resume Checkout(args)`
    break_expr: $ => 'break',

    match_expr: $ => seq(
      'match',
      $._expr,
      $._newline,
      $._indent,
      repeat1($.match_branch),
      $._dedent,
    ),

    // `responsive | Mobile -> … | Desktop -> …` — sugar for a match on the implicit
    // `viewport.breakpoint` subject. Same exhaustive Breakpoint coverage as the
    // explicit form; the only difference is the subject is supplied by lowering.
    match_branch: $ => choice(
      seq('|', $.pattern, repeat(seq('|', $.pattern)), '->', $._branch_body),
      seq('|', '->', $._branch_body),
      seq('|', '()'),
    ),

    _branch_body: $ => choice(
      seq($._expr, $._newline),
      $.step_goto,                         // | Ok r -> :done r  (saga step transition)
      $.element,                           // | Before -> Text "x" color=red
      seq($._newline, $._indent, repeat1($._saga_stmt), $._dedent),
    ),

    pattern: $ => choice(
      $.simple_pattern,
      $.guard_pattern,
    ),

    simple_pattern: $ => choice(
      $.literal,
      $.wildcard,
      seq('[', ']'),
      $.upper_id,
      seq($.upper_id, $.lower_id, $.record_pattern),  // Ok response { body, status }
      seq($.upper_id, $.simple_pattern),
      seq($.upper_id, $.record_pattern),
      $.record_pattern,
      $.qualified_pattern,
      $.binding_pattern,
      seq('(', $.pattern, ')'),  // parenthesized: Ok (Chunk c)
      $.tuple_pattern,           // (a, b), (Ok x, Error e)
    ),

    // Tuple destructuring pattern: two or more comma-separated sub-patterns.
    binding_pattern: $ => $.lower_id,

    record_pattern: $ => seq(
      '{',
      commaSep1($.lower_id),
      '}',
    ),

    call: $ => prec.left('postfix', seq(
      $._expr,
      choice(
        seq(token.immediate('('), optional($._arg_list), ')'),
        // Zero-arg call `f()`: the `()` lexes as a single token (it would
        // otherwise be the `unit` literal), so match it immediately here.
        // `token.immediate` outranks the plain `unit` token, so an Upper-headed
        // `Inc()` resolves to a call rather than an incomplete element.
        token.immediate('()'),
      ),
    )),

    _arg_list: $ => seq(
      commaSep1(choice($.named_arg, $._expr)),
      optional(','),
    ),

    // `name=value` keyword argument. The `=` glyph binds a value to a parameter
    // by name (record fields keep `:`). All positional args must precede named.
    atom: $ => choice(
      $.literal,
      $.lower_id,
      $.upper_id,
      $.grouped,
      $.tuple_literal,
      $.record_literal,
      $.record_spread,
      $.list_literal,
    ),

    // ----------
    // Effects
    // ----------

    send_expr: $ => seq(
      'send',
      $.upper_id,
      $.atom,
    ),

    ask_expr: $ => seq(
      'ask',
      $.upper_id,
      $.atom,
      optional(seq('timeout=', $.number)),
    ),

    transaction_expr: $ => seq(
      'transaction',
      optional(seq('within', $.record_literal)),
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // ----------
    // Event handlers
    // ----------

    on_handler: $ => seq(
      'on',
      $.lower_id,                 // event name (onClick, onInput, …)
      optional($.lower_id),       // optional event param: `on onInput e -> …(e.value)`
      choice(
        seq('->', $._expr, $._newline),
        seq('->', $._newline, $._indent, repeat1($._statement), $._dedent),
      ),
    ),

    // ----------
    // Escape blocks
    // ----------

    await_expr: $ => prec('unary', seq('await', $._expr)),

    // await expr\n  | branches — wait and match on result
    await_stmt: $ => seq(
      'await',
      $._expr,
      $._newline,
      $._indent,
      repeat1($.match_branch),
      $._dedent,
    ),

    loop_expr: $ => seq(
      'loop',
      $._newline,
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // ----------
    // Elements
    // ----------

    // A single self-terminating element rule (no inline/block split). The element
    // consumes its own trailing _newline, then OPTIONALLY an indented children
    // block — exactly the `if_expr` shape, which parses correctly at double-dedent
    // boundaries. The previous element_inline/element_block split made `inline` a
    // prefix of `block`, an ambiguity the GLR+indent-scanner resolved wrongly when
    // an element-bodied function was followed by another top-level def (children
    // mis-nested / collapsed to siblings). Elements are only ever statements,
    // match-branch bodies, or children — never inline sub-expressions — so eating
    // the newline here is safe. Content: `Text "hi" size=12`, `Image url radius=8`.
    // Strict element (statement / branch position): must carry ≥1 prop OR a
    // children block, so a bare `Ok (x)` / `Spacer` stays an adt_call constructor
    // application and only genuine elements (`Text "x" size=1`, `Column\n …`) are
    // elements. Self-terminating: eats its own newline, then optional children.
    // (Content-only leaf elements like `Text "hello"` are allowed via element_leaf
    // inside a children_block, where no adt_call competes.)
    element: $ => seq(
      $.upper_id,
      optional($.element_content),
      choice(
        seq(repeat1($.prop), $._newline, optional($.children_block)),
        seq($._newline, $.children_block),
      ),
    ),

    // A content-only / bare element, valid only as a child (no adt_call ambiguity
    // there): `Text "hello"`, `Spacer`.
    element_leaf: $ => seq(
      $.upper_id,
      optional($.element_content),
      $._newline,
    ),

    // positional content: literal or parenthesized expression (not a bare ident — that's a prop)
    element_content: $ => choice(
      $.literal,
      $.grouped,
    ),

    for_child: $ => seq(
      'for',
      $.lower_id,
      'in',
      $._expr,
      $._newline,
      $._indent,
      choice($.element, $.element_leaf),
      $._dedent,
    ),

    // ----------
    // Literals
    // ----------
